# ether-old

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  build-ci.sh  build.sh  openwrt-atheros-vmlinux.elf:Zone.Identifier  qemu-iso-uefi.sh  qemu-iso.sh  qemu-uefi.sh  qemu.sh  version.asm  vmlinux.elf
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
boot/: iso.asm
cmake/: ClangFormat.cmake  CodeCoverage.cmake  Cppcheck.cmake
docs/: Doxyfile.in  EBFS.md
efi/: console.asm  disk.asm  efi.asm
ether/: entry.asm  entry64.asm  ether.asm  link.ld  multiboot.asm
ether/cpu/: gdt.asm  idt.asm  sse.asm
ether/video/: vgatext.asm
installer/: efi.asm
isoloader/: isoloader.asm
loader/: loader-iso.asm  loader-main.asm  loader.asm  loader32.asm
loader/apic/: pic.asm
loader/cpu/: idt.asm
loader/disk/: atapio.asm
loader/fs/: ebfs.asm  elf.asm
loader/lib/: string.asm
loader/memory/: mm.asm
loader/rm/: a20.asm  gdt.asm  memory.asm
loader/video/: vgatext.asm
mbr/: fat12.asm  iso.asm  main.asm
tests/: CMakeLists.txt
tests/src/: main.cpp
util/: CMakeLists.txt
util/diskutil/: CMakeLists.txt
util/diskutil/src/: main.cpp
util/fatutil/: CMakeLists.txt
util/fatutil/src/: main.cpp
util/partlib/: CMakeLists.txt
util/partlib/include/partlib/: CRC32.hpp  EBFS.hpp  GPT.hpp  GUID.hpp  Image.hpp
util/partlib/src/: CRC32.cpp  EBFS.cpp  GUID.cpp  Image.cpp
