#=============================================================================|
#  _______ _________          _______  _______                                |
#  (  ____ \\__   __/|\     /|(  ____ \(  ____ )                              |
#  | (    \/   ) (   | )   ( || (    \/| (    )|                              |
#  | (__       | |   | (___) || (__    | (____)|    By Hákon Hjaltalín.       |
#  |  __)      | |   |  ___  ||  __)   |     __)    Licensed under MIT.       |
#  | (         | |   | (   ) || (      | (\ (                                 |
#  | (____/\   | |   | )   ( || (____/\| ) \ \__                              |
#  (_______/   )_(   |/     \|(_______/|/   \__/                              |
#=============================================================================|

# Subdirectories

add_subdirectory(partlib)
add_subdirectory(diskutil)

# Lists

set(ETHER_SOURCE_FILES ${ETHER_SOURCE_FILES} PARENT_SCOPE)
set(ETHER_INCLUDE_FILES ${ETHER_INCLUDE_FILES} PARENT_SCOPE)
